# senec-v3-collector

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cst.yaml  docker-compose.yml  release-please-config.json  renovate.json
.github/workflows/: auto-merge-release-please.yml  build.yaml  release-please.yaml  renovate-auto-approve.yml  security.yml
apps/senec-collect/: Cargo.toml
apps/senec-collect/src/: main.rs
apps/senec-discover/: Cargo.toml
apps/senec-discover/src/: main.rs
crates/senec-core/: Cargo.toml
crates/senec-core/src/: client.rs  decode.rs  lib.rs  model.rs  profile.rs
crates/senec-discovery/: Cargo.toml
crates/senec-discovery/src/: discovery.rs  lib.rs
crates/senec-export/: Cargo.toml
crates/senec-export/src/: lib.rs  telemetry.rs
deploy/compose/: .env  README.md  collector.local-bind.yml  stack.local-bind.yml  stack.yml
deploy/grafana/dashboards/: senec-v3-production-overview.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: prometheus.yml
deploy/prometheus/: prometheus.yml
deploy/victoriametrics/: scrape.yaml
src/: lib.rs
