[package]
name = "senec-v3-workspace"
version = "0.12.5"
publish = false

[workspace]
members = [
    "crates/senec-core",
    "crates/senec-discovery",
    "crates/senec-export",
    "apps/senec-collect",
    "apps/senec-discover",
]
default-members = ["apps/senec-collect"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["timsc"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }

clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
prometheus = "0.14"
regex = "1.11"
reqwest = { version = "0.13", default-features = false, features = ["cookies", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
