[package]
name = "senec-v3-discover"
version = "1.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

senec-core = { path = "../../crates/senec-core" }
senec-discovery = { path = "../../crates/senec-discovery" }
